native/include/dart_monty.h

/* ------------------------------------------------------------------ */
/* Opaque handle                                                      */
/* ------------------------------------------------------------------ */

/** Opaque handle to a compiled Python program. */
typedef struct MontyHandle MontyHandle;
/* ------------------------------------------------------------------ */
/* Enums                                                              */
/* ------------------------------------------------------------------ */

/** Result tag for monty_run(). */
typedef enum {
    MONTY_RESULT_OK    = 0,
    MONTY_RESULT_ERROR = 1,
} MontyResultTag;
/** Progress tag for monty_start() / monty_resume(). */
typedef enum {
    MONTY_PROGRESS_COMPLETE        = 0,
    MONTY_PROGRESS_PENDING         = 1,
    MONTY_PROGRESS_ERROR           = 2,
    MONTY_PROGRESS_RESOLVE_FUTURES = 3,
} MontyProgressTag;
/* ------------------------------------------------------------------ */
/* Lifecycle                                                          */
/* ------------------------------------------------------------------ */

/**
 * Create a new handle from Python source code.
 *
 * @param code         NUL-terminated UTF-8 Python source.
 * @param ext_fns      Comma-separated external function names, or NULL.
 * @param script_name  NUL-terminated script name for tracebacks, or NULL
 *                     for the default ("<input>").
 * @param out_error    On failure, receives a heap-allocated error message.
 *                     Caller frees with monty_string_free(). May be NULL.
 * @return             Heap-allocated handle, or NULL on error.
 */
MontyHandle *monty_create(const char *code,
                           const char *ext_fns,
                           const char *script_name,
                           char **out_error);
/**
 * Free a handle. Safe to call with NULL.
 */
void monty_free(MontyHandle *handle);
/* ------------------------------------------------------------------ */
/* Run to completion                                                  */
/* ------------------------------------------------------------------ */

/**
 * Run Python code to completion.
 *
 * @param handle       Valid handle from monty_create().
 * @param result_json  Receives heap-allocated JSON result string.
 *                     Caller frees with monty_string_free(). May be NULL.
 * @param error_msg    Receives heap-allocated error message on failure,
 *                     or NULL on success. Caller frees with monty_string_free().
 * @return             MONTY_RESULT_OK or MONTY_RESULT_ERROR.
 */
MontyResultTag monty_run(MontyHandle *handle,
                          char **result_json,
                          char **error_msg);
/* ------------------------------------------------------------------ */
/* Iterative execution                                                */
/* ------------------------------------------------------------------ */

/**
 * Start iterative execution. Pauses at external function calls.
 *
 * @param handle     Valid handle from monty_create().
 * @param out_error  Receives error message on failure. Caller frees.
 * @return           MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
 */
MontyProgressTag monty_start(MontyHandle *handle,
                              char **out_error);
/**
 * Resume execution with a return value.
 *
 * @param handle      Handle in PENDING state.
 * @param value_json  NUL-terminated JSON value to return to Python.
 * @param out_error   Receives error message on failure. Caller frees.
 * @return            MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
 */
MontyProgressTag monty_resume(MontyHandle *handle,
                               const char *value_json,
                               char **out_error);
/**
 * Resume execution with an error (raises RuntimeError in Python).
 *
 * @param handle         Handle in PENDING state.
 * @param error_message  NUL-terminated error message string.
 * @param out_error      Receives FFI error message on failure. Caller frees.
 * @return               MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
 */
MontyProgressTag monty_resume_with_error(MontyHandle *handle,
                                          const char *error_message,
                                          char **out_error);
/* ------------------------------------------------------------------ */
/* Async / Futures                                                    */
/* ------------------------------------------------------------------ */

/**
 * Resume by creating a future (tells the VM this call returns a future).
 * Only valid when handle is in PENDING state.
 *
 * @param handle     Handle in PENDING state.
 * @param out_error  Receives error message on failure. Caller frees.
 * @return           MONTY_PROGRESS_COMPLETE, _PENDING, _RESOLVE_FUTURES,
 *                   or _ERROR.
 */
MontyProgressTag monty_resume_as_future(MontyHandle *handle,
                                         char **out_error);
/**
 * Get the pending future call IDs as a JSON array.
 * Only valid after progress returned MONTY_PROGRESS_RESOLVE_FUTURES.
 *
 * @return  Heap-allocated JSON array string (e.g. "[0,1,2]"), or NULL.
 *          Caller frees with monty_string_free().
 */
char *monty_pending_future_call_ids(const MontyHandle *handle);
/**
 * Resume futures with results and errors.
 * Only valid when handle is in RESOLVE_FUTURES state.
 *
 * @param handle        Handle in RESOLVE_FUTURES state.
 * @param results_json  JSON object mapping call_id (string) to value,
 *                      e.g. {"0": "value0", "1": 42}.
 * @param errors_json   JSON object mapping call_id (string) to error message,
 *                      e.g. {"2": "timeout"}. Use "{}" for no errors.
 * @param out_error     Receives error message on failure. Caller frees.
 * @return              MONTY_PROGRESS_COMPLETE, _RESOLVE_FUTURES, _PENDING,
 *                      or _ERROR.
 */
MontyProgressTag monty_resume_futures(MontyHandle *handle,
                                       const char *results_json,
                                       const char *errors_json,
                                       char **out_error);
/* ------------------------------------------------------------------ */
/* State accessors                                                    */
/* ------------------------------------------------------------------ */

/**
 * Get the pending external function name.
 * Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
 *
 * @return  Heap-allocated string, or NULL. Caller frees with monty_string_free().
 */
char *monty_pending_fn_name(const MontyHandle *handle);
/**
 * Get the pending function arguments as a JSON array.
 * Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
 *
 * @return  Heap-allocated JSON string, or NULL. Caller frees with monty_string_free().
 */
char *monty_pending_fn_args_json(const MontyHandle *handle);
/**
 * Get the pending function keyword arguments as a JSON object.
 * Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
 *
 * @return  Heap-allocated JSON string (e.g. "{}"), or NULL.
 *          Caller frees with monty_string_free().
 */
char *monty_pending_fn_kwargs_json(const MontyHandle *handle);
/* ------------------------------------------------------------------ */
/* Memory management                                                  */
/* ------------------------------------------------------------------ */

/** Free a string returned by any monty_* function. Safe with NULL. */
void monty_string_free(char *ptr);