packages/dart_monty_ffi/lib/src/generated/dart_monty_bindings.dart

// AUTO-GENERATED — do not edit by hand.
// Regenerate with: bash tool/generate_bindings.sh

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Auto-generated FFI bindings for dart_monty native library.
class DartMontyBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  DartMontyBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  DartMontyBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Create a new handle from Python source code.
  ///
  /// @param code         NUL-terminated UTF-8 Python source.
  /// @param ext_fns      Comma-separated external function names, or NULL.
  /// @param script_name  NUL-terminated script name for tracebacks, or NULL
  /// for the default ("<input>").
  /// @param out_error    On failure, receives a heap-allocated error message.
  /// Caller frees with monty_string_free(). May be NULL.
  /// @return             Heap-allocated handle, or NULL on error.
  ffi.Pointer<MontyHandle> monty_create(
    ffi.Pointer<ffi.Char> code,
    ffi.Pointer<ffi.Char> ext_fns,
    ffi.Pointer<ffi.Char> script_name,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return _monty_create(
      code,
      ext_fns,
      script_name,
      out_error,
    );
  }

  late final _monty_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<MontyHandle> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('monty_create');
  late final _monty_create = _monty_createPtr.asFunction<
      ffi.Pointer<MontyHandle> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Free a handle. Safe to call with NULL.
  void monty_free(
    ffi.Pointer<MontyHandle> handle,
  ) {
    return _monty_free(
      handle,
    );
  }

  late final _monty_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<MontyHandle>)>>(
          'monty_free');
  late final _monty_free =
      _monty_freePtr.asFunction<void Function(ffi.Pointer<MontyHandle>)>();

  /// Run Python code to completion.
  ///
  /// @param handle       Valid handle from monty_create().
  /// @param result_json  Receives heap-allocated JSON result string.
  /// Caller frees with monty_string_free(). May be NULL.
  /// @param error_msg    Receives heap-allocated error message on failure,
  /// or NULL on success. Caller frees with monty_string_free().
  /// @return             MONTY_RESULT_OK or MONTY_RESULT_ERROR.
  MontyResultTag monty_run(
    ffi.Pointer<MontyHandle> handle,
    ffi.Pointer<ffi.Pointer<ffi.Char>> result_json,
    ffi.Pointer<ffi.Pointer<ffi.Char>> error_msg,
  ) {
    return MontyResultTag.fromValue(_monty_run(
      handle,
      result_json,
      error_msg,
    ));
  }

  late final _monty_runPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<MontyHandle>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('monty_run');
  late final _monty_run = _monty_runPtr.asFunction<
      int Function(ffi.Pointer<MontyHandle>, ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Start iterative execution. Pauses at external function calls.
  ///
  /// @param handle     Valid handle from monty_create().
  /// @param out_error  Receives error message on failure. Caller frees.
  /// @return           MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
  MontyProgressTag monty_start(
    ffi.Pointer<MontyHandle> handle,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MontyProgressTag.fromValue(_monty_start(
      handle,
      out_error,
    ));
  }

  late final _monty_startPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<MontyHandle>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('monty_start');
  late final _monty_start = _monty_startPtr.asFunction<
      int Function(
          ffi.Pointer<MontyHandle>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Resume execution with a return value.
  ///
  /// @param handle      Handle in PENDING state.
  /// @param value_json  NUL-terminated JSON value to return to Python.
  /// @param out_error   Receives error message on failure. Caller frees.
  /// @return            MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
  MontyProgressTag monty_resume(
    ffi.Pointer<MontyHandle> handle,
    ffi.Pointer<ffi.Char> value_json,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MontyProgressTag.fromValue(_monty_resume(
      handle,
      value_json,
      out_error,
    ));
  }

  late final _monty_resumePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<MontyHandle>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('monty_resume');
  late final _monty_resume = _monty_resumePtr.asFunction<
      int Function(ffi.Pointer<MontyHandle>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Resume execution with an error (raises RuntimeError in Python).
  ///
  /// @param handle         Handle in PENDING state.
  /// @param error_message  NUL-terminated error message string.
  /// @param out_error      Receives FFI error message on failure. Caller frees.
  /// @return               MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
  MontyProgressTag monty_resume_with_error(
    ffi.Pointer<MontyHandle> handle,
    ffi.Pointer<ffi.Char> error_message,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MontyProgressTag.fromValue(_monty_resume_with_error(
      handle,
      error_message,
      out_error,
    ));
  }

  late final _monty_resume_with_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<MontyHandle>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('monty_resume_with_error');
  late final _monty_resume_with_error = _monty_resume_with_errorPtr.asFunction<
      int Function(ffi.Pointer<MontyHandle>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Resume by creating a future (tells the VM this call returns a future).
  /// Only valid when handle is in PENDING state.
  ///
  /// @param handle     Handle in PENDING state.
  /// @param out_error  Receives error message on failure. Caller frees.
  /// @return           MONTY_PROGRESS_COMPLETE, _PENDING, _RESOLVE_FUTURES,
  /// or _ERROR.
  MontyProgressTag monty_resume_as_future(
    ffi.Pointer<MontyHandle> handle,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MontyProgressTag.fromValue(_monty_resume_as_future(
      handle,
      out_error,
    ));
  }

  late final _monty_resume_as_futurePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<MontyHandle>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('monty_resume_as_future');
  late final _monty_resume_as_future = _monty_resume_as_futurePtr.asFunction<
      int Function(
          ffi.Pointer<MontyHandle>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Get the pending future call IDs as a JSON array.
  /// Only valid after progress returned MONTY_PROGRESS_RESOLVE_FUTURES.
  ///
  /// @return  Heap-allocated JSON array string (e.g. "[0,1,2]"), or NULL.
  /// Caller frees with monty_string_free().
  ffi.Pointer<ffi.Char> monty_pending_future_call_ids(
    ffi.Pointer<MontyHandle> handle,
  ) {
    return _monty_pending_future_call_ids(
      handle,
    );
  }

  late final _monty_pending_future_call_idsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<MontyHandle>)>>('monty_pending_future_call_ids');
  late final _monty_pending_future_call_ids = _monty_pending_future_call_idsPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>();

  /// Resume futures with results and errors.
  /// Only valid when handle is in RESOLVE_FUTURES state.
  ///
  /// @param handle        Handle in RESOLVE_FUTURES state.
  /// @param results_json  JSON object mapping call_id (string) to value,
  /// e.g. {"0": "value0", "1": 42}.
  /// @param errors_json   JSON object mapping call_id (string) to error message,
  /// e.g. {"2": "timeout"}. Use "{}" for no errors.
  /// @param out_error     Receives error message on failure. Caller frees.
  /// @return              MONTY_PROGRESS_COMPLETE, _RESOLVE_FUTURES, _PENDING,
  /// or _ERROR.
  MontyProgressTag monty_resume_futures(
    ffi.Pointer<MontyHandle> handle,
    ffi.Pointer<ffi.Char> results_json,
    ffi.Pointer<ffi.Char> errors_json,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MontyProgressTag.fromValue(_monty_resume_futures(
      handle,
      results_json,
      errors_json,
      out_error,
    ));
  }

  late final _monty_resume_futuresPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<MontyHandle>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('monty_resume_futures');
  late final _monty_resume_futures = _monty_resume_futuresPtr.asFunction<
      int Function(ffi.Pointer<MontyHandle>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Get the pending external function name.
  /// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
  ///
  /// @return  Heap-allocated string, or NULL. Caller frees with monty_string_free().
  ffi.Pointer<ffi.Char> monty_pending_fn_name(
    ffi.Pointer<MontyHandle> handle,
  ) {
    return _monty_pending_fn_name(
      handle,
    );
  }

  late final _monty_pending_fn_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<MontyHandle>)>>('monty_pending_fn_name');
  late final _monty_pending_fn_name = _monty_pending_fn_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>();

  /// Get the pending function arguments as a JSON array.
  /// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
  ///
  /// @return  Heap-allocated JSON string, or NULL. Caller frees with monty_string_free().
  ffi.Pointer<ffi.Char> monty_pending_fn_args_json(
    ffi.Pointer<MontyHandle> handle,
  ) {
    return _monty_pending_fn_args_json(
      handle,
    );
  }

  late final _monty_pending_fn_args_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<MontyHandle>)>>('monty_pending_fn_args_json');
  late final _monty_pending_fn_args_json = _monty_pending_fn_args_jsonPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>();

  /// Get the pending function keyword arguments as a JSON object.
  /// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
  ///
  /// @return  Heap-allocated JSON string (e.g. "{}"), or NULL.
  /// Caller frees with monty_string_free().
  ffi.Pointer<ffi.Char> monty_pending_fn_kwargs_json(
    ffi.Pointer<MontyHandle> handle,
  ) {
    return _monty_pending_fn_kwargs_json(
      handle,
    );
  }
